<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">

    <item
        android:id="@+id/fav_movies_show"
        android:orderInCategory="1"
        android:title="@string/fav_movies"
        app:showAsAction="never" />

    <item
        android:id="@+id/pop_movies_show"
        android:orderInCategory="2"
        android:title="@string/populares"
        app:showAsAction="never" />

    <item
        android:id="@+id/top_movies_show"
        android:orderInCategory="3"
        android:title="@string/top"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:orderInCategory="5"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>
